--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   </head>
   <body>
     <main>
-      <h1>Display Inline</h1>
+      <h1><code>display: inline</code></h1>
       <br>
       <div class="">
         <span class="child1">consectetur adipiscing elit. Proin luctus</span>
         <span class="child2">ligula ut porta finibus, dolor massa convallis tellus</span>
       </div>
       <br>
-      <h1>Display Block</h1>
+      <h1><code>display: block</code></h1>
       <div class="">
         <div class="child1">
           <h2>Child 1</h2>
@@ -27,7 +27,7 @@
           <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
         </div>
       </div>
-      <h1>Display Flex</h1>
+      <h1><code>display: flex</code></h1>
       <div class="display-flex">
           <div class="child1">
             <h2>Child 1</h2>
@@ -42,7 +42,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</p>
           </div>
       </div>
-      <h1>Flex Direction Row Reverse</h1>
+      <h1><code>flex-direction: row-reverse</code></h1>
       <div class="flex-direction-row">
           <div class="child1">
             <h2>Child 1</h2>
@@ -57,7 +57,7 @@
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
           </div>
       </div>
-      <h1>Flex Direction Column</h1>
+      <h1><code>flex-direction: column</code></h1>
       <div class="flex-direction-column">
           <div class="child1">
             <h2>Child 1</h2>
@@ -72,7 +72,7 @@
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
           </div>
       </div>
-      <h1>Justify Content Space Around</h1>
+      <h1><code>justify-content space-around</code></h1>
       <div class="justify-content-space-around">
           <div class="child1 set-width">
             <h2>Child 1</h2>
@@ -87,7 +87,7 @@
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
           </div>
       </div>
-      <h1>Justify Content Flex End</h1>
+      <h1><code>justify-content: flex-end</code></h1>
       <div class="justify-content-flex-end">
           <div class="child1 set-width">
             <h2>Child 1</h2>
@@ -102,6 +102,54 @@
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
           </div>
       </div>
+      <h1><code>align-items: center</code></h1>
+      <div class="align-items-center set-height">
+          <div class="child1">
+            <h2>Child 1</h2>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+          </div>
+          <div class="child2">
+            <h2>Child 2</h2>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+          </div>
+          <div class="child3">
+            <h2>Child 3</h2>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+          </div>
+      </div>
+      <h1><code>align-items: flex-end</code></h1>
+      <div class="align-items-flex-end set-height">
+          <div class="child1">
+            <h2>Child 1</h2>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+          </div>
+          <div class="child2">
+            <h2>Child 2</h2>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+          </div>
+          <div class="child3">
+            <h2>Child 3</h2>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+          </div>
+      </div>
+      <h1><code>align-items: stretch</code></h1>
+      <div class="align-items-stretch set-height">
+          <div class="child1">
+            <h2>Child 1</h2>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+          </div>
+          <div class="child2">
+            <h2>Child 2</h2>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+          </div>
+          <div class="child3">
+            <h2>Child 3</h2>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+          </div>
+      </div>
+      <h1><code>flex-wrap: wrap</code></h1>
+      <h1><code>align-content: stretch</code></h1>
+      <h1><code>flex: 1</code></h1>
     </main>
   </body>
 </html>
