Shortening lorum ipsum to lessen scrolling

--- a/index.html
+++ b/index.html
@@ -20,87 +20,91 @@
       <div class="">
         <div class="child1">
           <h2>Child 1</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</p>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
         </div>
         <div class="child2">
           <h2>Child 2</h2>
-          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
+        <div class="child3">
+          <h2>Child 3</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
         </div>
       </div>
       <h1><code>display: flex</code></h1>
       <div class="display-flex">
-          <div class="child1">
-            <h2>Child 1</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</p>
-          </div>
-          <div class="child2">
-            <h2>Child 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</p>
-          </div>
-          <div class="child3">
-            <h2>Child 3</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</p>
-          </div>
+        <div class="child1">
+          <h2>Child 1</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
+        <div class="child2">
+          <h2>Child 2</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
+        <div class="child3">
+          <h2>Child 3</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
       </div>
       <h1><code>flex-direction: row-reverse</code></h1>
       <div class="flex-direction-row">
-          <div class="child1">
-            <h2>Child 1</h2>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
-          </div>
-          <div class="child2">
-            <h2>Child 2</h2>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
-          </div>
-          <div class="child3">
-            <h2>Child 3</h2>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
-          </div>
+        <div class="child1">
+          <h2>Child 1</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
+        <div class="child2">
+          <h2>Child 2</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
+        <div class="child3">
+          <h2>Child 3</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
       </div>
       <h1><code>flex-direction: column</code></h1>
       <div class="flex-direction-column">
-          <div class="child1">
-            <h2>Child 1</h2>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
-          </div>
-          <div class="child2">
-            <h2>Child 2</h2>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
-          </div>
-          <div class="child3">
-            <h2>Child 3</h2>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
-          </div>
+        <div class="child1">
+          <h2>Child 1</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
+        <div class="child2">
+          <h2>Child 2</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
+        <div class="child3">
+          <h2>Child 3</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
       </div>
       <h1><code>justify-content space-around</code></h1>
       <div class="justify-content-space-around">
-          <div class="child1 set-width">
-            <h2>Child 1</h2>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
-          </div>
-          <div class="child2 set-width">
-            <h2>Child 2</h2>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
-          </div>
-          <div class="child3 set-width">
-            <h2>Child 3</h2>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
-          </div>
+        <div class="child1 set-width">
+          <h2>Child 1</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
+        <div class="child2 set-width">
+          <h2>Child 2</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
+        <div class="child3 set-width">
+          <h2>Child 3</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
       </div>
       <h1><code>justify-content: flex-end</code></h1>
       <div class="justify-content-flex-end">
-          <div class="child1 set-width">
-            <h2>Child 1</h2>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
-          </div>
-          <div class="child2 set-width">
-            <h2>Child 2</h2>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
-          </div>
-          <div class="child3 set-width">
-            <h2>Child 3</h2>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus, dolor massa convallis tellus, id blandit lacus est nec metus. Maecenas ultrices leo sed dapibus sollicitudin. Nullam iaculis feugiat metus, quis lobortis nisi fermentum ut. Pellentesque porta varius eleifend. Phasellus dapibus nulla ex, ac condimentum purus suscipit in. Aenean faucibus lacus quis nisl molestie pulvinar. Nulla posuere rutrum quam eu scelerisque. Quisque sodales tempor feugiat.</span>
-          </div>
+        <div class="child1 set-width">
+          <h2>Child 1</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
+        <div class="child2 set-width">
+          <h2>Child 2</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
+        <div class="child3 set-width">
+          <h2>Child 3</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
       </div>
       <h1><code>align-items: center</code></h1>
       <div class="align-items-center set-height">
