Finished first pass

--- a/index.html
+++ b/index.html
@@ -78,30 +78,30 @@
       </div>
       <h1><code>justify-content space-around</code></h1>
       <div class="justify-content-space-around">
-        <div class="child1 set-width">
+        <div class="child1 set-width-child">
           <h2>Child 1</h2>
           <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
         </div>
-        <div class="child2 set-width">
+        <div class="child2 set-width-child">
           <h2>Child 2</h2>
           <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
         </div>
-        <div class="child3 set-width">
+        <div class="child3 set-width-child">
           <h2>Child 3</h2>
           <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
         </div>
       </div>
       <h1><code>justify-content: flex-end</code></h1>
       <div class="justify-content-flex-end">
-        <div class="child1 set-width">
+        <div class="child1 set-width-child">
           <h2>Child 1</h2>
           <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
         </div>
-        <div class="child2 set-width">
+        <div class="child2 set-width-child">
           <h2>Child 2</h2>
           <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
         </div>
-        <div class="child3 set-width">
+        <div class="child3 set-width-child">
           <h2>Child 3</h2>
           <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
         </div>
@@ -152,8 +152,42 @@
           </div>
       </div>
       <h1><code>flex-wrap: wrap</code></h1>
-      <h1><code>align-content: stretch</code></h1>
-      <h1><code>flex: 1</code></h1>
+      <div class="flex-wrap">
+        <div class="child1 set-size-child">
+          <h2>Child 1</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
+        <div class="child2 set-size-child">
+          <h2>Child 2</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
+        <div class="child3 set-size-child">
+          <h2>Child 3</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
+      </div>
+      <h1><code>flex: 2, flex: 1, flex: 1</code></h1>
+      <div class="display-flex">
+          <div class="child1 set-size-child flex-2">
+            <h2>Child 1</h2>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+          </div>
+          <div class="child2 set-size-child flex-1">
+            <h2>Child 2</h2>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+          </div>
+          <div class="child3 set-size-child flex-1">
+            <h2>Child 3</h2>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+          </div>
+      </div>
+      <h1>Perfect Centering</h1>
+      <div class="display-flex set-size-parent">
+        <div class="child1 set-size-child-centered">
+          <h2>Child 1</h2>
+          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus, ligula ut porta finibus</span>
+        </div>
+      </div>
     </main>
   </body>
 </html>
