Adding note to self for flex-wrap

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
           </div>
       </div>
       <h1><code>flex-wrap: wrap</code></h1>
+      <h4>Note: Must resize window to see full effect</h4>
       <div class="flex-wrap">
         <div class="child1 set-size-child">
           <h2>Child 1</h2>
